--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
         "nette/neon": "^2.4",
-        "nette/utils": "^2.5"
+        "nette/utils": "^2.5",
+        "sabre/dav": "^3.2"
     },
     "minimum-stability": "stable"
 }
