Přesun nastavení do konfiguračního souboru a jeho rozšíření

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "nette/neon": "^2.4",
         "nette/utils": "^2.5",
         "sabre/dav": "^3.2",
-	    "ext-curl": "*"
+	    "ext-curl": "*",
+	    "ext-json": "*"
     },
     "minimum-stability": "stable"
 }
