--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,13 @@
         "nette/utils": "^2.5",
         "sabre/dav": "^3.2",
 	    "ext-curl": "*",
-	    "ext-json": "*"
+	    "ext-json": "*",
+	    "ext-mbstring": "*"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\Control\\": "app/control/"
+        }
     },
     "minimum-stability": "stable"
 }
