Opravy chyb, rozšíření konfigurace - délka intervalů v časovém filtru

--- a/config/service.neon
+++ b/config/service.neon
@@ -31,6 +31,8 @@ limits:
 		steamid: yes
 		# Time filters shown?
 		time: yes
+		# Time filter interval length
+		timeIntervals: 300
 		# Event type filters shown?
 		type: yes
 	# Fontend limits
