--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
         "sabre/dav": "^3.2",
         "ext-curl": "*",
         "ext-json": "*",
-        "ext-mbstring": "*"
+        "ext-mbstring": "*",
+        "nette/http": "^2.4",
+        "ehesp/steam-login": "^1.2",
+        "koraktor/steam-condenser": "^1.3"
     },
     "autoload": {
         "psr-4": {
